# tts-ds-fundamentals-course

./: README.md
datascience/python/09_mod_numpy/: 01_introduction_NumPy.ipynb  index.ipynb
datascience/python/09_mod_numpy/.ipynb_checkpoints/: 02_basics_NumPy-checkpoint.ipynb
datascience/python/09_mod_numpy/flake8-markdown/: pyproject.toml
datascience/python/10_mod_pandas/: 01_introduction_to_pandas.ipynb  03_data_manipulation_pandas.ipynb  04_getting_started_pandas.ipynb
datascience/python/10_mod_pandas/.ipynb_checkpoints/: 02_introducing-pandas-objects-checkpoint.ipynb  03_data_manipulation_pandas-checkpoint.ipynb  05_pandas_exercises-checkpoint.ipynb
datascience/python/realworld/.ipynb_checkpoints/: index-checkpoint.ipynb
datascience/python/realworld/COVID-19/: index.ipynb
datascience/python/realworld/salary/: index.ipynb
datascience/python/realworld/salary/.ipynb_checkpoints/: index-checkpoint.ipynb
datascience/python/realworld/spanishflu/: index.ipynb
datascience/python/realworld/stock-picker/.ipynb_checkpoints/: index-checkpoint.ipynb
