[tool.poetry]
name = "flake8-markdown"
version = "0.1.0"
description = "Flake 8 is my first package I ever created for Python Developers"
authors = ["GS Jackson <gary.jackson@qlx.com>"]
homepage = "https://enterlifeonline.medium.com/"
repository = "https://github.com/enterlifeonline/flake8-markdown"
keywords = ["flake8", "markdown"]

[tool.poetry.dependencies]
python = "^3.8"
# new dependency
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
